# NuvioTV

./: .gitignore  local.example.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/full/java/com/nuvio/tv/core/plugin/: PluginManager.kt  PluginRuntime.kt
app/src/full/java/com/nuvio/tv/updater/: UpdateViewModel.kt
app/src/full/java/com/nuvio/tv/updater/ui/: UpdatePromptDialog.kt
app/src/main/cpp/: CMakeLists.txt  dovi_bridge.cpp
app/src/main/java/com/nuvio/tv/: MainActivity.kt
app/src/main/java/com/nuvio/tv/core/cloud/: CloudLibraryRepository.kt
app/src/main/java/com/nuvio/tv/core/debrid/: DebridDeviceAuth.kt  DebridFileSelection.kt  DebridMagnetBuilder.kt  DebridProvider.kt  DebridStreamFormatter.kt  DebridStreamFormatterDefaults.kt  DebridStreamPresentation.kt  DebridStreamTemplateEngine.kt  DirectDebridConfigEncoder.kt  DirectDebridResolver.kt  DirectDebridStreamFilter.kt  DirectDebridStreamPreparer.kt  DirectDebridStreamSource.kt  LocalDebridAvailabilityService.kt  LocalDebridService.kt  RealDebridDirectDebridResolver.kt  RealDebridFileSelector.kt  TorboxDirectDebridResolver.kt  TorboxFileSelector.kt
app/src/main/java/com/nuvio/tv/core/di/: NetworkModule.kt
app/src/main/java/com/nuvio/tv/core/network/: SafeApiCall.kt
app/src/main/java/com/nuvio/tv/core/player/: BitrateAwareLoadControl.kt  DolbyVisionExtractorsFactory.kt  DolbyVisionMatroskaTransformer.kt  DoviBridge.kt  FrameRateUtils.kt  StreamAutoPlaySelector.kt  TrailerPlayerPool.kt
app/src/main/java/com/nuvio/tv/core/recommendations/: ProgramBuilder.kt
app/src/main/java/com/nuvio/tv/core/server/: AddonConfigServerModels.kt  AddonWebPage.kt  DebridFormatterConfigServer.kt  DebridFormatterWebPage.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-b+es+419/: strings.xml
app/src/main/res/values-bs/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-hu/: string.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-iw/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-lt/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-no/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-pt-rPT/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sk/: strings.xml
app/src/main/res/values-sl/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-ta/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: locale_config.xml
ffmpeg-decoder-downmix/: NOTICE.md  README.md  build.gradle.kts
ffmpeg-decoder-downmix/src/main/java/androidx/media3/decoder/ffmpeg/: FfmpegAudioDecoder.java  FfmpegAudioRenderer.java
ffmpeg-decoder-downmix/src/main/jni/: CMakeLists.txt  ffmpeg_jni.cc
(+155 files in other folders)
